// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route template should allow static imports 1`] = `
Object {
  "code": "
  {
    name: 'foo',
    path: '/foo',
    component: Foo,
  }
  ",
  "imports": "import Foo from '@/assets/foo.md'",
}
`;

exports[`Route template should configure chunk name prefix 1`] = `
Object {
  "code": "
  {
    name: 'foo',
    path: '/foo',
    component: Foo,
  }
  ",
  "imports": "function Foo() { return import(/* webpackChunkName: \\"assets-foo\\" */ '@/assets/foo.md') }",
}
`;

exports[`Route template should generate route meta 1`] = `
Object {
  "code": "
  {
    name: 'foo',
    path: '/foo',
    component: Foo,meta: {
  \\"title\\": \\"Hello\\"
},
  }
  ",
  "imports": "import Foo from '@/assets/foo.md'",
}
`;

exports[`Route template should generate routes 1`] = `
Object {
  "code": "
  {
    name: 'guides',
    path: '/guides',
    redirect: { name: 'guides-foo' },children: [
  {
    name: 'guides-foo',
    path: 'foo',
    component: GuidesFoo,
  }
  ,
  {
    name: 'guides-bar',
    path: 'bar',
    component: GuidesBar,
  }
  ],
  }
  ",
  "imports": "
function GuidesFoo() { return import(/* webpackChunkName: \\"guides-foo\\" */ '@/assets/guides/foo.md') }
function GuidesBar() { return import(/* webpackChunkName: \\"guides-bar\\" */ '@/assets/guides/bar.md') }",
}
`;

exports[`Route template should not include name if the route has a default child 1`] = `
Object {
  "code": "
  {
    
    path: '/foo',
    redirect: { name: 'foo-index' },children: [
  {
    name: 'foo-index',
    path: '',
    component: FooIndex,
  }
  ],
  }
  ",
  "imports": "
function FooIndex() { return import(/* webpackChunkName: \\"foo-index\\" */ '@/assets/foo/index.md') }",
}
`;
